--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 "node_modules/" 
 "*.pt" 
 "*.pth" 
+"node_modules/" 
+"*.pt" 
+"*.pth" 
+"*.h5" 
+"*.mp4" 
+"*.zip" 
+"*.rar" 
+"*.exe" 
+"data/" 
